# github-project-radar

./: .gitignore  README.md
cold-storage/openai/openai-agents-python/2026-07-13/source/: .gitignore  AGENTS.md  Makefile  PLANS.md  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
cold-storage/openai/openai-agents-python/2026-07-13/source/.agents/references/: README.md  agent-definition-and-run-context.md  conversation-state-ownership.md  function-and-output-schema.md  local-mcp-server-lifecycle.md  model-provider-boundaries.md  realtime-session-lifecycle.md  realtime-tracing.md  run-item-lifecycle.md  runner-lifecycle.md  runstate-schema.md  sandbox-runtime-boundary.md  session-persistence.md  tool-execution-lifecycle.md  tool-identity.md  tracing-lifecycle.md  voice-pipeline-lifecycle.md
cold-storage/openai/openai-agents-python/2026-07-13/source/.codex/: hooks.json
cold-storage/openai/openai-agents-python/2026-07-13/source/.codex/hooks/: stop_repo_tidy.py
cold-storage/openai/openai-agents-python/2026-07-13/source/.github/: dependabot.yml
cold-storage/openai/openai-agents-python/2026-07-13/source/.github/ISSUE_TEMPLATE/: bug_report.md  model_provider.md
cold-storage/openai/openai-agents-python/2026-07-13/source/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
cold-storage/openai/openai-agents-python/2026-07-13/source/.github/scripts/: detect-changes.sh  run-asyncio-teardown-stability.sh  select-release-milestone.py
cold-storage/openai/openai-agents-python/2026-07-13/source/.github/workflows/: docs.yml  issues.yml  publish.yml  release-pr.yml  release-tag.yml  tests.yml
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/: context.md  examples.md  quickstart.md  repl.md  results.md  running_agents.md  streaming.md  tools.md  tracing.md  usage.md
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/ja/: agents.md  guardrails.md  handoffs.md  human_in_the_loop.md  index.md  multi_agent.md  quickstart.md  release.md  repl.md  results.md  sandbox_agents.md  sessions.md  streaming.md  tracing.md  usage.md
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/ko/: agents.md  context.md  examples.md  guardrails.md  human_in_the_loop.md  mcp.md  multi_agent.md  release.md  results.md  running_agents.md  sandbox_agents.md  sessions.md  streaming.md  tools.md  tracing.md  visualization.md
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/models/: index.md
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/realtime/: guide.md  quickstart.md
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/ref/: editor.md  index.md  logger.md  sandbox.md  strict_schema.md  tool_guardrails.md  version.md
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/sandbox/: clients.md
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/scripts/: translate_docs.py
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/sessions/: advanced_sqlite_session.md  encrypted_session.md
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/voice/: pipeline.md  tracing.md
cold-storage/openai/openai-agents-python/2026-07-13/source/docs/zh/: agents.md  context.md  human_in_the_loop.md  mcp.md  quickstart.md  repl.md  results.md  sandbox_agents.md  sessions.md  streaming.md  tools.md
cold-storage/openai/openai-agents-python/2026-07-13/source/examples/: run_examples.py  web_search_utils.py
cold-storage/openai/openai-agents-python/2026-07-13/source/examples/agent_patterns/: agents_as_tools.py  agents_as_tools_conditional.py  agents_as_tools_streaming.py  agents_as_tools_structured.py  deterministic.py  forcing_tool_use.py  hosted_multi_agent_beta.py  human_in_the_loop.py  human_in_the_loop_custom_rejection.py  input_guardrails.py  llm_as_a_judge.py  parallelization.py  routing.py
cold-storage/openai/openai-agents-python/2026-07-13/source/examples/basic/: agent_lifecycle_example.py  dynamic_system_prompt.py  hello_world_gpt_5.py  hello_world_gpt_oss.py  image_tool_output.py  lifecycle_example.py  local_file.py  non_strict_output_type.py  previous_response_id.py  prompt_template.py  remote_image.py  remote_pdf.py  retry.py  retry_litellm.py  stream_function_call_args.py  stream_items.py  stream_ws.py  tool_guardrails.py  tools.py  usage_tracking.py
cold-storage/openai/openai-agents-python/2026-07-13/source/examples/customer_service/: main.py
cold-storage/openai/openai-agents-python/2026-07-13/source/examples/financial_research_agent/: main.py  manager.py
cold-storage/openai/openai-agents-python/2026-07-13/source/examples/handoffs/: message_filter.py  message_filter_streaming.py
cold-storage/openai/openai-agents-python/2026-07-13/source/examples/hosted_mcp/: connectors.py  human_in_the_loop.py  on_approval.py  simple.py
cold-storage/openai/openai-agents-python/2026-07-13/source/examples/memory/: advanced_sqlite_session_example.py  compaction_session_example.py  file_hitl_example.py  (+7 more)
cold-storage/openai/openai-agents-python/2026-07-13/source/tests/: _fake_workspace_paths.py  conftest.py  fake_model.py  test_agent_as_tool.py  test_agent_clone_shallow_copy.py  test_agent_config.py  test_agent_hooks.py  test_agent_instructions_signature.py  test_agent_llm_hooks.py  test_agent_memory_leak.py  test_agent_prompt.py  test_agent_runner.py  test_agent_runner_streamed.py  test_agent_runner_sync.py  test_agent_tool_input.py  test_agent_tool_state.py  test_agent_tracing.py  test_agents_logging.py  test_apply_diff.py  test_apply_diff_helpers.py  test_apply_patch_tool.py  test_asyncio_progress.py  test_call_model_input_filter.py  test_call_model_input_filter_unit.py  test_cancel_streaming.py  test_computer_action.py  test_computer_tool_lifecycle.py  test_config.py  test_custom_tool.py  test_daytona_usaspending_example.py  test_debug.py  test_example_workflows.py  test_exception_exports.py  test_extension_filters.py  test_extra_headers.py  test_function_schema.py  test_function_tool.py  test_function_tool_decorator.py  test_global_hooks.py  test_guardrails.py  (+69 more)
(+1473 files in other folders)
